[package]
name = "my_library"
version = "0.1.0"
authors = ["BuRny <gamingburny@gmail.com>"]
edition = "2018"

[lib]
name = "my_library"
crate-type = ["cdylib"]

[dependencies]
cute = "0.3"
numpy = "0.7.0"
ndarray = "0.13"
pathfinding = "2.0"
indexmap = "1.3"
#pretty_assertions = "0.6.1"
fnv = "1.0.6"

[dependencies.pyo3]
version = "0.8.5"
features = ["extension-module"]
