[package]
name = "my_library"
version = "0.1.0"
authors = ["BuRny <gamingburny@gmail.com>"]
edition = "2018"

[lib]
name = "my_library"
crate-type = ["cdylib"]

[dependencies]
#cute = "0.3"
numpy = "0.13.1"
ndarray = "0.13.1"
movingai = "1.1.1"
blitz-path = "0.2.0"
#pathfinding = "2.0"
#indexmap = "1.3"
#pretty_assertions = "0.6.1"
#fnv = "1.0.6"
pyo3 = "0.13.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
