[tool.poetry]
name = "rust-python-pyo3-test-lib"
version = "0.1.0"
description = ""
authors = ["BurnySc2 <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
burnysc2 = "^5.0.10"
matplotlib = "^3.4.1"
numpy = "<=1.19.3"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
